src/test/ui/invalid-self-argument/trait-fn.stderr
error: unexpected `self` argument in function
  --> $DIR/trait-fn.rs:4:20
   |
LL |     fn c(foo: u32, self) {}
   |                    ^^^^ must be the first associated function argument

error: aborting due to previous error

